4.2/4ae711f4a37bff6cf501b48d58f9e28b031b02c9
Docs: blackfin: Use new switch macro SAMPLE_IRQ_TIMER instead of IRQ_TIMER5

Not all blackfin machines support IRQ_TIMER5, but all machines support
IRQ_TIMER2. So add a switch macro for them. The related error:

  Documentation/blackfin/gptimers-example.c: In function 'gptimer_example_init':
  Documentation/blackfin/gptimers-example.c:60:20: error: 'IRQ_TIMER5' undeclared (first use in this function)
    ret = request_irq(IRQ_TIMER5, gptimer_example_irq, IRQF_SHARED, DRIVER_NAME, &data);
                      ^
  Documentation/blackfin/gptimers-example.c:60:20: note: each undeclared identifier is reported only once for each function it appears in
  Documentation/blackfin/gptimers-example.c: In function 'gptimer_example_exit':
  Documentation/blackfin/gptimers-example.c:78:11: error: 'IRQ_TIMER5' undeclared (first use in this function)
    free_irq(IRQ_TIMER5, &data);
             ^

Also notice about 80 columns limitation.

Signed-off-by: Chen Gang <gang.chen.5i5j@gmail.com>
Signed-off-by: Jonathan Corbet <corbet@lwn.net>

